Added tests for F40 functions